--- a/Malmö högskola/inlamning5.html
+++ b/Malmö högskola/inlamning5.html
@@ -17,8 +17,8 @@
 			<li>AK6336</li>
 		</ul>
 	</header></a>
-	<nav class="navbar">
-		<a href="/inlamning5.html">Start</a> <a href="/inlamning4_sida3.html">Om mig</a> <a href="/Inlamning4_sida2.html">Om CSS</a> <a href="/contact.html">Övrigt</a>
+<nav class="navbar">
+		<a href="/inlamning5.html">Start</a> <a href="/inlamning5_ommig.html">Om mig</a> <a href="/Inlamning5_omcss.html">Om CSS</a> <a href="/inlamning5_ovrigt.html">Övrigt</a>
 	</nav>
 	<div class="container">
 		<section>
