--- a/Malmö högskola/inlamning5_ovrigt.html
+++ b/Malmö högskola/inlamning5_ovrigt.html
@@ -20,12 +20,14 @@
 	<nav class="navbar">
 		<a href="/inlamning5.html">Start</a> <a href="/inlamning5_ommig.html">Om mig</a> <a href="/Inlamning5_omcss.html">Om CSS</a> <a href="/inlamning5_ovrigt.html">Övrigt</a>
 	</nav>
+	<div class="container">
 	<div id="main">
 		<h3>Contact</h3>
 	</div>
-	<div>
+	
 		For job inquiries contact me at fake@mail.com.
-	</div>
+	
+</div>
 	<footer>
 		<p>I'm a fancy footer. © FakeCompanyAB</p>
 	</footer>
