--- a/Malmö högskola/test.html
+++ b/Malmö högskola/test.html
@@ -8,3 +8,19 @@
 	<link href="https://fonts.googleapis.com/css?family=Fira+Mono:100,200,300,400,500,600" rel="stylesheet">
 </head>
 <body>
+	<div class="sidebar">
+		<header>
+			i6
+		</header>
+		<ul>
+		  			<li><a href="/inlamning1.html">Inlämning 1</a></li>
+					<li><a href="/Inlamning1_Del2.html">Inlämning 1 - Del 2</a></li>
+					<li><a href="/inlamning2.html">Inlämning 2</a></li>
+					<li><a href="/inlamning3.html">Inlämning 3</a></li>
+					<li><a href="/inlamning4.html">Inlämning 4</a></li>
+					<li><a href="/inlamning5.html">Inlämning 5</a></li>
+					<li><a href="/inlamning6.html">Inlämning 6</a></li>
+				</ul> 
+	</div>
+</body>
+</html>
