--- a/Malmö högskola/test.html
+++ b/Malmö högskola/test.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 	<div class="sidebar">
-		 <img src="flame.png" alt="flame, logo">
+		 <img src="logo-1913689_1280.png" alt="flame, logo">
 		<header>
 			Meny
 		</header>
